--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "homepage": "https://Deepanshu447.github.io/React-Website-Clone"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
