--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=https://my-backend-1-f1dg.onrender.com
+VITE_BACKEND_URL=https://my-backend-2-5hsg.onrender.com
+# VITE_BACKEND_URL=http://localhost:5000
