--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "firebase": "^12.2.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -38,7 +39,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
   }
